k8s/evaluation-service/evaluation-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      serviceAccountName: sa-gke
      containers:
        - name: evaluation-service
          image: evaluation-service
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            periodSeconds: 10
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            periodSeconds: 10
            initialDelaySeconds: 20
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: 16m
              memory: 32Mi
            limits:
              cpu: 128m
              memory: 256Mi
