k8s/evaluation-service/evaluation-service-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation-ns
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - name: http
      port: 80
      targetPort: 8004
